--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-svg-sprites": "^3.0.0",
+    "gulp-svg-sprites": "^4.0.1",
     "gulp-svg2png": "^0.3.0",
     "gulp-todo": "^4.0.0",
     "gulp-uncss": "^1.0.4",
@@ -42,9 +42,10 @@
     "gulp-useref": "^3.0.0",
     "imagemin-pngquant": "^4.2.0",
     "jshint-stylish": "^2.0.1",
+    "libxmljs": "https://github.com/decisive-wizard/libxmljs/tarball/master",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
-    "svg2png": "^2.0.0",
+    "svg2png": "^2.1.0",
     "ttf2woff2": "^2.0.3"
   }
 }
